# codex-cockpit

./: .gitignore  README.md  openai-api-key.json.example  openai.js  openai.json.example  package-lock.json  package.json  run.js
.github/workflows/: release.yml
app/: account-label.js  account-manager.js  claude-messages-handler.js  config-editor.js  log-reader.js  openai-config.js  openai-token-refresh.js  quota-history-store.js  responses-defaults.js  responses-failover.js  runtime-config-reconciler.js
desktop/: README.md  index.html  package.json
desktop/scripts/: prepare-frontend.mjs  prepare-node.mjs  prepare-resources.mjs
desktop/src/: main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: account-quota-runtime-logic.md  config-item-reference.md  responses-failover-current-implementation.md
extensions/chrome/: README.md  manifest.json  popup.css  popup.html  popup.js
public/: codex-accounts.html  config-admin.html  config-admin.js
public/admin-console/: index.html  styles.css
scripts/mac/: Launcher.command  Logs.command  Restart.command  Start.command  (+1 more)
test/: account-manager.test.js  claude-code-config.test.js  config-admin.test.js  config-editor.test.js  desktop-boot.test.js  log-reader.test.js  openai-admin-refresh.test.js  openai-token-refresh.test.js  proxy-boundary.test.js  quota-history-store.test.js  release-workflow.test.js  responses-defaults.test.js  responses-failover.test.js  run.test.js  runtime-config-reconciler.test.js
(+16 files in other folders)
