[package]
name = "airouter-desktop"
version = "0.1.0"
description = "Airouter Desktop"
authors = ["Airouter"]
edition = "2024"

[[bin]]
name = "airouter-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
